API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes


02-Apr-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added gsoap bindings and test client.
	Added gbfstrongs parsing of entry attributes

30-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added mod2imp to export a sword module in 'imp'
		format
	Better entry attribute parsing in greekdef* and
		thmlstrongs*

22-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added Saulo Rodrigues e Silva's <saulo@jatai.ufg.br>
		locale for pt_BR
	Added entry attributes for Thayer and ThMLStrongs
		(which includes morph also)


* Release 1.5.3 *

22-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Updated make system to display better user output
	Updated 'readme'-type files
	Added make install_config
	
21-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Changed SWMgr::Load ONE MORE TIME (blame Osk) to return
		signed char for mac ppc to work correctly

19-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Changed SWMgr::Load to return char status to be more
		consistent with rest of api.  Sorry guys.
	Added Daniel Glassey's patch to build diatheke
	Added new entryAttributes mechanism to SWModule
	Added new LocalOptionFilter GreekLexAttribs

18-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added ChrisLit's Diatheke, BibleCS, and InstallMgr updates
	Fixed Joachim's bug report about TreeKeyIdx segfaulting
		if no data at DataPath
	Added Joachim's patch to remove throw in SWMgr::Load

16-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added Martin Gruner's suggestion to swmgr to look
		for global configuration in multiple location.
		Set default to: /etc/sword.conf:/usr/local/etc/sword.conf
	Added ChrisLit's msvc and diatheke patches

15-Mar-2002     Troy A. Griffitts <scribe@crosswire.org>
	Added SWCacher to lib and made SWModule impl it
	Added SWModule::setSkipConsecutiveLinks
	Fixed mod2zmod to catch links